syntax = "proto3";

package types;

message ItemMetadata {
  bytes id = 1;
  uint64 file_size_bytes = 2;
  optional string file_name = 3;
  Hashes hashes = 4;
  // TODO: Add creation timestamp
}

message Hashes {
  bytes md5 = 1;
  bytes sha256 = 2;
}
